[project]
name = "Implied-Move-Calculator"
version = "0.1.0"
description = "Simple program that estimates a stock's implied move for the next expiration by pricing the at‑the‑money straddle using Alpaca options data. It prints a compact, readable summary."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alpaca-py>=0.42.0",
    "urllib3<2.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.12.8",
    "black>=25.1.0",
]

[project.scripts]
implied-move = "implied_move:main"
